[package]
name = "rust-calculate-sm3"
version = "0.2.4"
edition = "2024"
authors = ["dousx"]

[dependencies]
sm3 = "0.5.0"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
indicatif = "=0.18.4"                             # 锁定0.18.4版本，0.18.5版本进度条不显示(暂不清楚具体原因)

[profile.release]
strip = true
debug = false
opt-level = 3
